--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-/* font-weight: 100 ~ 900 
+/* font-weight: 100 ~ 900
 	300: Light
 	400: Regular
 	500: Medium
@@ -35,7 +35,12 @@
 
 .orderandpay .input_wrap select.width_phone,
 .orderandpay .select_wrap select.width_phone  {width: 70px !important;width: 100% !important;/* max-width: 100%; *//* min-width: 70px; */}
-
+.border-line{
+  margin-top: 20px !important;
+  border-top: 1px #DBDBDB solid;
+  border-bottom: 1px #DBDBDB solid;
+  padding: 18px 0;
+}
 /* 기본 박스 */
 .orderandpay .user_info_wrap {padding:24px 20px 0;}
 .orderandpay .user_info_wrap .user_title {font-size: 16px;font-weight: 700;border-bottom: 2px #000 solid;padding-bottom: 6px;}
@@ -104,7 +109,7 @@
 .orderandpay .table_wrap th span.star {color:#DA2128;margin-left: 2px;}
 .orderandpay .table_wrap td {padding: 6px 0px;font-weight: 500;}
 .orderandpay .table_wrap th.especially { padding-top: 18px; vertical-align: top;}
-   
+
 
 .orderandpay .table_wrap.vertical th {vertical-align: initial; padding: 8px 0;}
 .orderandpay .table_wrap.vertical .margin_set_top {margin-top: 16px !important;}
@@ -127,7 +132,7 @@
 
 .orderandpay .sorts th.border .have_inner_txt.inner_float .text_wrap {color:#000;}
 
-/* 제휴 포인트 */ 
+/* 제휴 포인트 */
 .orderandpay .point_list:after {content: ''; display: block; clear: both;}
 .orderandpay .point_list li {float: left; width:50%;}
 .orderandpay .point_list li .link {display: block; width:100%; position: relative; text-align: center;}
@@ -152,11 +157,11 @@
 .orderandpay .choice_wrap input[type="checkbox"] + label ,
 .orderandpay .choice_wrap input[type=radio]+ label {display: inline-block;position: relative;cursor: pointer;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;font-size: 13px;}
 .orderandpay .choice_wrap input[type="checkbox"] + label:before,
-.orderandpay .choice_wrap input[type="radio"] + label:before {content: ' ';display: inline-block;width: 18px;height: 18px;line-height: 20px;margin: -2px 5px 0 0;text-align: center;vertical-align: middle;background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center center;border: 1px solid #DBDBDB;border-radius : 10px;box-sizing: border-box;background-size: 10px 7px;font-weight: 400;} 
+.orderandpay .choice_wrap input[type="radio"] + label:before {content: ' ';display: inline-block;width: 18px;height: 18px;line-height: 20px;margin: -2px 5px 0 0;text-align: center;vertical-align: middle;background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center center;border: 1px solid #DBDBDB;border-radius : 10px;box-sizing: border-box;background-size: 10px 7px;font-weight: 400;}
 /*필요시 입력
-.orderandpay .choice_wrap input[type="checkbox"] + label:active:before, 
+.orderandpay .choice_wrap input[type="checkbox"] + label:active:before,
 .orderandpay .choice_wrap input[type="checkbox"]:checked + label:active:before,
-.orderandpay .choice_wrap input[type="radio"] + label:active:before, 
+.orderandpay .choice_wrap input[type="radio"] + label:active:before,
 .orderandpay .choice_wrap input[type="radio"]:checked + label:active:before  { } */
 
 .orderandpay .choice_wrap input[type="checkbox"]:checked + label:before,
@@ -166,7 +171,7 @@
 
 /* radio , checkbox 사각형 */
 .orderandpay .choice_wrap.type_squre input[type="checkbox"] + label:before,
-.orderandpay .choice_wrap.type_squre input[type="radio"] + label:before {content: ' ';display: inline-block;width: 20px;height: 20px;line-height: 20px;margin: -2px 6px 0 0;text-align: center;vertical-align: middle;background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center center;background-size:10px 7px;border: 1px solid #DBDBDB;border-radius : 4px;box-sizing: border-box;} 
+.orderandpay .choice_wrap.type_squre input[type="radio"] + label:before {content: ' ';display: inline-block;width: 20px;height: 20px;line-height: 20px;margin: -2px 6px 0 0;text-align: center;vertical-align: middle;background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center center;background-size:10px 7px;border: 1px solid #DBDBDB;border-radius : 4px;box-sizing: border-box;}
 .orderandpay .choice_wrap.type_squre input[type="checkbox"]:checked + label:before,
 .orderandpay .choice_wrap.type_squre input[type="radio"]:checked + label:before  { border:1px #DA2128 solid; background: #DA2128 url(../../images/new/icon_radio_on.png) no-repeat center center;  background-size:10px 7px;}
 
@@ -183,7 +188,7 @@
 .orderandpay .choice_wrap.type_box input[type="checkbox"] + label,
 .orderandpay .choice_wrap.type_box input[type="radio"] + label {display: block;border-left:1px #DBDBDB solid;border-right:1px #DBDBDB solid; border-top:1px #DBDBDB solid; border-bottom:1px #DBDBDB solid; padding: 15px 0 16px;text-align: center;margin-left: 0px;}
 .orderandpay .choice_wrap.type_box input[type="checkbox"] + label:before,
-.orderandpay .choice_wrap.type_box input[type="radio"] + label:before {content: ' ';display: inline-block; border:0; width: 12px;height: 9px;line-height: normal;margin: -2px 6px 0 0;text-align: center;vertical-align: middle;background: url(../../images/new/icon_order_check_off.png) no-repeat center center;background-size:12px 9px; box-sizing: border-box;} 
+.orderandpay .choice_wrap.type_box input[type="radio"] + label:before {content: ' ';display: inline-block; border:0; width: 12px;height: 9px;line-height: normal;margin: -2px 6px 0 0;text-align: center;vertical-align: middle;background: url(../../images/new/icon_order_check_off.png) no-repeat center center;background-size:12px 9px; box-sizing: border-box;}
 
 .orderandpay .choice_wrap.type_box input[type="checkbox"]:checked + label,
 .orderandpay .choice_wrap.type_box input[type="radio"]:checked + label {border-left: 1px #000 solid;border-bottom: 1px #000 solid;border-top: 1px #000 solid;position: relative;}
@@ -227,17 +232,16 @@
 .orderandpay .inner_float .choice_wrap_inner {margin-top: 0px;margin-left: 20px;}
 .orderandpay .inner_float .btn_defalut {float: left;}
 
-.orderandpay .inner_float .text_wrap {margin-left: 14px; margin-top:12px; float: left;} 
+.orderandpay .inner_float .text_wrap {margin-left: 14px; margin-top:12px; float: left;}
 
 
 /* 이메일 */
 .orderandpay .inner_float_dot .input_wrap {float: left;margin-left: 0px;line-height: 40px;width: calc(48% - 6px);text-align: center;}
 .orderandpay .inner_float_dot .input_wrap:first-child {margin-left: 0;}
+.orderandpay .inner_float_dot .input_wrap:last-child {margin-left: 0;margin-top:10px; width:100%;}
 .orderandpay .inner_float_dot .input_wrap._last {margin-left:10px;}
 .orderandpay .inner_float_dot .input_wrap.inner_dot {width: calc(4% - -12px);}
 .orderandpay .inner_float_dot .input_wrap.right {float: right;}
-
-
 
 /* btn */
 .orderandpay .btn_type_wrap {text-align: center;}
@@ -285,7 +289,7 @@
 .orderandpay .user_price_wrap .user_price_unit {background: #fff;padding: 0;float: none;margin-left: 0;}
 .orderandpay .user_price_wrap .user_price_unit:first-child {margin-left:0;}
 .orderandpay .user_price_wrap .price_unit_list:after {content: ''; display: block; clear: both;}
-.orderandpay .user_price_wrap .price_unit_list dt, 
+.orderandpay .user_price_wrap .price_unit_list dt,
 .orderandpay .user_price_wrap .price_unit_list dd {float: left;padding:0px 0;/* margin: 0 60px; */min-width: 80px;}
 .orderandpay .user_price_wrap .price_unit_list dt {font-size: 14px;font-weight: 400;color:#000;letter-spacing: -0.5px;}
 .orderandpay .user_price_wrap .price_unit_list dt.color {position: relative; padding-left:14px; margin-top: 7px;}
@@ -444,7 +448,7 @@
 
 .orderandpay .layer_pop_box {display:none; position: absolute;width: 100%;top: 0%;left: 0;}
 .orderandpay .dimed { display: none; position: fixed;top:0;left:0;width:100%;height:100%;background: rgba(0,0,0, .6);}
-.orderandpay .layer_pop {position: relative;z-index: 1000;} 
+.orderandpay .layer_pop {position: relative;z-index: 1000;}
 .orderandpay .layer_pop .layer_close {position: absolute;top: 15px;right: 35px; padding:10px; background: url(../../images/new/layer_icon_close.png) no-repeat center center;width:16px;height:16px;background-size: 16px 16px;font-size: 0;}
 
 .orderandpay .layer_pop_box.active {display: block;}
@@ -522,12 +526,12 @@
 
 .orderandpay .bigger.btn_type01_v2 { height: 38px; font-size: 16px; min-width: 180px; line-height: initial; padding: 6px 0; height: auto; box-sizing: border-box;}
 
-.orderandpay .btn_type05_v2 {font-size: 13px;height:32px;width:112px;padding: 0;box-sizing: border-box;border: 1px #D6D6D6 solid;line-height: 28px;} 
+.orderandpay .btn_type05_v2 {font-size: 13px;height:32px;width:112px;padding: 0;box-sizing: border-box;border: 1px #D6D6D6 solid;line-height: 28px;}
 
 .orderandpay .count_up,
-.orderandpay .count_down  {width:32px;height:32px;display:block;border:1px #D6D6D6 solid;font-size: 0;float: left;box-sizing: border-box;} 
+.orderandpay .count_down  {width:32px;height:32px;display:block;border:1px #D6D6D6 solid;font-size: 0;float: left;box-sizing: border-box;}
 .orderandpay .count_up { background: url(../../images/new/icon_count_up.png) no-repeat center center;}
-.orderandpay .count_down {background: url(../../images/new/icon_count_down.png) no-repeat center center;} 
+.orderandpay .count_down {background: url(../../images/new/icon_count_down.png) no-repeat center center;}
 
 .orderandpay .bbs_list_v2 .t_left a.txt_option { color: #FF6A5B;font-size: 14px;line-height: 20px;padding: 5px 0 0 0;}
 
@@ -542,9 +546,9 @@
 
 .orderandpay .last_address_list li {padding: 24px 0; border-bottom:1px #DBDBDB solid;}
 .orderandpay .last_address_list li:first-child {padding-top:0;}
-.orderandpay .last_address_list li .choice_wrap input[type="checkbox"] + label, 
+.orderandpay .last_address_list li .choice_wrap input[type="checkbox"] + label,
 .orderandpay .last_address_list li .choice_wrap input[type="radio"] + label{width:100%; display: block; text-align: right; position: relative;}
-.orderandpay .last_address_list li .choice_wrap input[type="checkbox"] + label:before, 
+.orderandpay .last_address_list li .choice_wrap input[type="checkbox"] + label:before,
 .orderandpay .last_address_list li .choice_wrap input[type="radio"] + label:before {position: absolute; top:0; right:0; margin:0;}
 .orderandpay .last_address_list li div[class*="last_address"] {text-align:left;}
 .orderandpay .last_address_list .last_address_name {font-size: 16px; font-weight: 700; color:#000000;}
@@ -584,7 +588,7 @@
 
 
 /* 고객센터 paging */
-.orderandpay .paging {margin-top:36px;} 
+.orderandpay .paging {margin-top:36px;}
 .orderandpay .paging > a {display:inline-block;width:24px;height:24px;overflow:hidden;line-height:99px;}
 .orderandpay .paging .prev {margin-right:7px;background:url(../../images/new/cs_icon_prev_off.png) no-repeat center center;background-size:10px 17px;}
 .orderandpay .paging .next {margin-left:7px;background:url(../../images/new/cs_icon_next_on.png) no-repeat center center;background-size:10px 17px;}
@@ -619,7 +623,7 @@
 
 
 
-}	
+}
 
 @media screen and (max-width: 320px) {
 	.orderandpay .table_wrap th{width: 70px;}
@@ -640,7 +644,7 @@
 
 	.orderandpay .inner_float .input_wrap {width: calc(33% - 11px);}
 
-	
+
 	.orderandpay .input_wrap input {/*font-size: 11px;*/padding-right: 3px;padding-left: 3px;}
 	.orderandpay .input_wrap input::placeholder{font-size: 11px;}
 	.orderandpay .input_wrap input::-webkit-input-placeholder{font-size: 11px;}
