--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-/* font-weight: 100 ~ 900 
+/* font-weight: 100 ~ 900
 	300: Light
 	400: Regular
 	500: Medium
@@ -32,8 +32,23 @@
 .orderandpay .width_popup_point {max-width: 100px; width:100px !important;}
 .orderandpay .input_wrap select.width_phone,
 .orderandpay .select_wrap select.width_phone  {width: 80px !important;}
-.orderandpay .width_file {max-width: 443px;width: 443px !important;} 
+.orderandpay .width_file {max-width: 443px;width: 443px !important;}
 .orderandpay .width_bulk {max-width: 250px; width:250px !important;}
+.orderandpay .select_wrap.tit{
+  line-height: 32px;
+}
+a.addr.btn_defalut{
+  padding: 10px 19px;
+    height: auto;
+    min-width: 116px;
+    background: #EEEEEE;
+    font-size: 13px;
+    font-weight: 700;
+    color: #FFFFFF;
+    outline: none;
+    color: #000;
+    border-radius: 30px;
+}
 
 /* 기본 박스 */
 .orderandpay .user_info_wrap {margin-top:50px;}
@@ -99,6 +114,92 @@
 .orderandpay .table_wrap.type_1 {}
 .orderandpay .table_wrap.type_1 th {background: #fff; text-align: left; border-left:0; border-right: 0;}
 .orderandpay .table_wrap.type_1 .btn_defalut.squre {margin-left:-1px;}
+.orderandpay ul.agency_select {
+    overflow: hidden;
+    width:100%;
+
+    margin-top:30px;
+}
+.orderandpay ul.agency_select>li {
+    position: relative;
+    float: left;
+    min-height: 104px;
+    line-height: 104px;
+		width: 33.33%;
+		border-bottom: none;
+}
+.orderandpay ul.agency_select:after {
+    content: "";
+		display: block;
+		clear: both;
+}
+.orderandpay ul.agency_select input[type="radio"] {
+    display:none;
+}
+.orderandpay ul.agency_select label {
+	 border: 1px solid #ddd;
+	 cursor: pointer;
+	 font-size:16px;
+	 color:#666;
+	 text-align: center !important;
+   background: url(../../images/new/ic_check_off_01.png) right 22px top 22px no-repeat;
+}
+.orderandpay ul.agency_select label img {
+	vertical-align:middle;
+}
+.orderandpay .ui_align_mid {
+	  position: absolute;
+	  top: 0;
+	  right: 0;
+	  bottom: 0;
+	  left: 0;
+	  z-index: 1;
+	  text-align: center;
+}
+.orderandpay ul.agency_select input[type="radio"]:checked + label .current {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
+    width: 100%;
+    height: 100%;
+    box-sizing: content-box;
+    background: url(../../images/new/ic_check_on_01.png) right 22px top 23px no-repeat;
+}
+ul.agency_select input[type="radio"]:checked + label {
+    color:#0258cd;
+}
+ul.agency_select li:nth-child(1) + li label {
+	border-left: 0;
+}
+ul.agency_select li:nth-child(2) + li label {
+	border-left: 0;
+}
+ul.agency_select li:nth-child(3) + li label {
+ border-left: 0;
+}
+ul.agency_select li:nth-child(1) .ele {
+	background: url(../../images/new/gs_point.png) 50% 50% no-repeat;
+  text-indent: -9999px;
+  display: inline-block;
+  width: 180px;
+  height: 104px;
+}
+ul.agency_select li:nth-child(2) .ele {
+	background: url(../../images/new/l_point.png) 50% 50% no-repeat;
+  text-indent: -9999px;
+  display: inline-block;
+  width: 180px;
+  height: 104px;
+}
+ul.agency_select li:nth-child(3) .ele {
+	background: url(../../images/new/ok_cash.png) 50% 50% no-repeat;
+  text-indent: -9999px;
+  display: inline-block;
+  width: 180px;
+  height: 104px;
+}
 
 
 /* radio , checkbox 원형 */
@@ -109,7 +210,7 @@
 .orderandpay .choice_wrap input[type="checkbox"] + label ,
 .orderandpay .choice_wrap input[type=radio]+ label { display: inline-block; position: relative; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
 .orderandpay .choice_wrap input[type="checkbox"] + label:before,
-.orderandpay .choice_wrap input[type="radio"] + label:before { content: ''; display: inline-block; width: 20px; height: 20px; line-height: 20px; margin: -2px 8px 0 0; text-align: center; vertical-align: middle; background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center left 4px; border: 1px solid #DBDBDB; border-radius : 10px;  box-sizing: border-box;} 
+.orderandpay .choice_wrap input[type="radio"] + label:before { content: ''; display: inline-block; width: 20px; height: 20px; line-height: 20px; margin: -2px 8px 0 0; text-align: center; vertical-align: middle; background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center left 4px; border: 1px solid #DBDBDB; border-radius : 10px;  box-sizing: border-box;}
 
 .orderandpay .choice_wrap input[type="checkbox"]:checked + label:before,
 .orderandpay .choice_wrap input[type="radio"]:checked + label:before  { border:1px #DA2128 solid; background: #DA2128 url(../../images/new/icon_radio_on.png) no-repeat center left 4px;}
@@ -123,7 +224,7 @@
 */
 /* radio , checkbox 사각형 */
 .orderandpay .choice_wrap.type_squre input[type="checkbox"] + label:before,
-.orderandpay .choice_wrap.type_squre input[type="radio"] + label:before { content: ' '; display: inline-block; width: 20px; height: 20px; line-height: 20px; margin: -2px 5px 0 0; text-align: center; vertical-align: middle; background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center center;; border: 1px solid #DBDBDB; border-radius : 4px;  box-sizing: border-box;} 
+.orderandpay .choice_wrap.type_squre input[type="radio"] + label:before { content: ' '; display: inline-block; width: 20px; height: 20px; line-height: 20px; margin: -2px 5px 0 0; text-align: center; vertical-align: middle; background: #EEEEEE url(../../images/new/icon_radio_on.png) no-repeat center center;; border: 1px solid #DBDBDB; border-radius : 4px;  box-sizing: border-box;}
 .orderandpay .choice_wrap.type_squre input[type="checkbox"]:checked + label:before,
 .orderandpay .choice_wrap.type_squre input[type="radio"]:checked + label:before  { border:1px #DA2128 solid; background: #DA2128 url(../../images/new/icon_radio_on.png) no-repeat center left 4px;}
 
@@ -146,7 +247,7 @@
 .orderandpay .inner_float .choice_wrap_inner {margin-top: 11px; margin-left: 20px;}
 .orderandpay .inner_float .btn_defalut {float: left;}
 
-.orderandpay .inner_float .text_wrap {margin-left: 14px; margin-top:12px; float: left;} 
+.orderandpay .inner_float .text_wrap {margin-left: 14px; margin-top:12px; float: left;}
 
 .orderandpay .inner_float .btn_space {margin-left:5px;}
 .orderandpay .inner_float .select_wrap {float: left;}
@@ -192,13 +293,46 @@
 .orderandpay .order_list {}
 
 /* 결제금액 */
+.orderandpay .user_price_wrap {padding:0px; margin-top: 100px;}
+.orderandpay .user_price_wrap:after {content: ''; display: block; clear: both;}
+.orderandpay .user_price_wrap .user_price_unit {background: #fff;padding: 0px;float: left;margin-left:30px;width:calc(100% - 670px);}
+.orderandpay .user_price_wrap .user_price_unit:first-child {margin-left:0;width: 640px;}
+.orderandpay .user_price_wrap .user_price_unit .color {
+  padding-left:20px;
+  background: url(../../images/new/ic_indent_01.png) 0 50% no-repeat;
+  color: #777777;
+  box-sizing: border-box;
+}
+.orderandpay .user_price_wrap .price_unit_list{overflow: hidden;width: 100%;}
+.orderandpay .user_price_wrap .price_unit_list:after {content: ''; display: block; clear: both;}
+.orderandpay .user_price_wrap .price_unit_list dt,
+.orderandpay .user_price_wrap .price_unit_list dd {float: left;padding:10px 0;margin: 0px;}
+.orderandpay .user_price_wrap .price_unit_list dt {font-size: 14px; color:#000;width: 35%;}
+.orderandpay .user_price_wrap .price_unit_list dd {font-size: 14px;text-align: right;width: 65%;}
+
+.orderandpay .user_price_wrap .price_unit_list.sum dt,
+.orderandpay .user_price_wrap .price_unit_list.sum dd{font-size: 18px;font-weight: bold;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum_tit {font-size: 18px;font-weight:700;text-align: center;line-height: 24px;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum {font-size: 18px;font-weight:500;text-align: right;margin-top: 3px;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum .only_english {font-size: 24px; font-weight:700;}
+.orderandpay .user_price_wrap .user_price_unit .unit_sum_point {border-top:1px #DBDBDB solid; margin-top: 22px;text-align: center;padding: 18px 0 13px;}
+.w100p{min-width:100% !important;box-sizing:border-box;}
+.fc-bl{color:#49A4FC;}
+
+.orderandpay .user_price_wrap .price_total{overflow: hidden;width: 100%;}
+.orderandpay .user_price_wrap .price_total:after {content: ''; display: block; clear: both;}
+.orderandpay .user_price_wrap .price_total dt,
+.orderandpay .user_price_wrap .price_total dd {float: left;padding:10px 0;margin: 0px;}
+.orderandpay .user_price_wrap .price_total dt {font-size: 14px; font-weight: 500;color:#000;width: 35%;}
+.orderandpay .user_price_wrap .price_total dd {font-size: 14px;text-align: right;width: 65%;}
+/*
 .orderandpay .user_price_wrap {background: #FAFAFA; padding:40px; margin-top: 30px;}
 .orderandpay .user_price_wrap:after {content: ''; display: block; clear: both;}
 .orderandpay .user_price_wrap .user_price_unit {background: #fff;padding: 46px 70px;float: left;margin-left:10px;}
 .orderandpay .user_price_wrap .user_price_unit:first-child {margin-left:0;}
 .orderandpay .user_price_wrap .user_price_unit .color {color: #777777;}
 .orderandpay .user_price_wrap .price_unit_list:after {content: ''; display: block; clear: both;}
-.orderandpay .user_price_wrap .price_unit_list dt, 
+.orderandpay .user_price_wrap .price_unit_list dt,
 .orderandpay .user_price_wrap .price_unit_list dd {float: left;padding:8px 0;margin: 0 60px;min-width: 80px;}
 .orderandpay .user_price_wrap .price_unit_list dt {font-size: 16px; font-weight:500; color:#000;}
 .orderandpay .user_price_wrap .price_unit_list dd {font-size: 16px;font-weight:400;text-align: right;}
@@ -208,7 +342,7 @@
 .orderandpay .user_price_wrap .user_price_unit .unit_sum {font-size: 18px;font-weight:500;margin-top: 13px;text-align: center;}
 .orderandpay .user_price_wrap .user_price_unit .unit_sum .only_english {font-size: 28px; font-weight:700;}
 .orderandpay .user_price_wrap .user_price_unit .unit_sum_point {border-top:1px #B5B5B5 solid; margin-top: 22px;text-align: center;padding: 18px 20px 0;}
-
+*/
 /* 결제방법 */
 .orderandpay .user_pay_wrap .color {color: #777777;}
 
@@ -218,7 +352,7 @@
 .orderandpay .tab_wrap {}
 .orderandpay .tab_list  {margin-top:20px; margin-left: -10px;}
 .orderandpay .tab_list:after {content:''; display:block; clear:both;}
-.orderandpay .tab_list .items {float: left;min-width: 180px;margin-left: 12px;margin-top: 10px;}
+.orderandpay .tab_list .items {float: left;min-width:calc(33% - 10px);margin-left: 12px;margin-top: 10px;}
 .orderandpay .tab_list .items .link {display: block;vertical-align: middle;padding: 13px 10px;font-size:18px;font-weight:400;color:#000;position: relative;text-align: center;border: 2px #DBDBDB solid;border-radius: 24px;}
 .orderandpay .tab_layer_wrap {position: relative; margin-top:20px;}
 .orderandpay .tab_layer {display: none; height: auto;}
@@ -229,7 +363,7 @@
 .orderandpay .tab_layer .tab_layer_text_box {background: #FAFAFA; padding:30px;}
 .orderandpay .tab_layer .tab_layer_text_box .layer_title {font-size: 16px; font-weight: 500}
 .orderandpay .tab_layer .tab_layer_text_box .layer_txt_list {margin-top: 15px;}
-.orderandpay .tab_layer .tab_layer_text_box .layer_txt_list li {font-size: 13px;font-weight:400;position: relative;margin:10px 0;padding-left: 10px;}
+.orderandpay .tab_layer .tab_layer_text_box .layer_txt_list li {font-size: 13px;font-weight:400;position: relative;margin:10px 0;padding-left: 10px;line-height: 1.4;}
 .orderandpay .tab_layer .tab_layer_text_box .layer_txt_list li:before {content:'';display: block;width: 3px;height:3px;background: #777777;position: absolute;top:6px;left:0;border-radius: 100%;}
 
 .orderandpay .tab_layer .last_check {font-size: 16px;}
@@ -290,7 +424,7 @@
 .orderandpay .tooltip_wrap .tooltip_inner:after {content: ''; display: block; clear:both;}
 .orderandpay .tooltip_wrap .tooltip_tit {font-size: 32px;font-weight:400;border-bottom: 2px #000 solid;padding-bottom: 10px;}
 .orderandpay .tooltip_wrap .tooltip_list {margin-top: 30px;}
-.orderandpay .tooltip_wrap .tooltip_list li, 
+.orderandpay .tooltip_wrap .tooltip_list li,
 .orderandpay .tooltip_wrap .tooltip_inner .texts {font-size: 14px; color:#777777;}
 .orderandpay .tooltip_wrap .tooltip_inner .texts {line-height: 1.5em; margin-top: 25px;}
 .orderandpay .tooltip_wrap .tooltip_close,
@@ -302,7 +436,7 @@
 /* 쿠폰조회 */
 .orderandpay .tooltip_wrap .table02_v1 thead th{background: #FAFAFA;font-size: 13px;font-weight: 500;}
 .orderandpay .tooltip_wrap .tit01 {font-size:16px; font-weight:700;}
-.orderandpay .tooltip_wrap .box_gray02 { background: #FAFAFA; border: 0 none; font-size: 18px;font-weight: 500; color: #000;   } 
+.orderandpay .tooltip_wrap .box_gray02 { background: #FAFAFA; border: 0 none; font-size: 18px;font-weight: 500; color: #000;   }
 
 .orderandpay .tooltip_wrap .choice_wrap .select_wrap { min-width: 164px; margin: 0 auto; max-width: max-content;}
 .orderandpay .tooltip_wrap .tbl_top {margin-top:15px;}
@@ -330,12 +464,12 @@
 .orderandpay .bigger.btn_type01_v2 { height: 38px; font-size: 16px; min-width: 180px; line-height: initial; padding: 6px 0; height: auto; box-sizing: border-box;}
 
 .orderandpay .txt_option {}
-.orderandpay .btn_type05_v2 {font-size: 13px;height:32px;width:112px;padding: 0;box-sizing: border-box;border: 1px #D6D6D6 solid;line-height: 28px;} 
+.orderandpay .btn_type05_v2 {font-size: 13px;height:32px;width:112px;padding: 0;box-sizing: border-box;border: 1px #D6D6D6 solid;line-height: 28px;}
 
 .orderandpay .count_up,
-.orderandpay .count_down  {width:32px;height:32px;display:block;border:1px #D6D6D6 solid;font-size: 0;float: left;box-sizing: border-box;} 
+.orderandpay .count_down  {width:32px;height:32px;display:block;border:1px #D6D6D6 solid;font-size: 0;float: left;box-sizing: border-box;}
 .orderandpay .count_up { background: url(../../images/new/icon_count_up.png) no-repeat center center;}
-.orderandpay .count_down {background: url(../../images/new/icon_count_down.png) no-repeat center center;} 
+.orderandpay .count_down {background: url(../../images/new/icon_count_down.png) no-repeat center center;}
 
 .orderandpay .bbs_list_v2 .t_left a.txt_option { color: #FF6A5B;font-size: 14px;line-height: 20px;padding: 5px 0 0 0;}
 
@@ -381,7 +515,7 @@
 .orderandpay .page_location .title {float:left;font-size: 24px; font-weight:700; line-height: normal;}
 .orderandpay .page_location .title a {display: block;}
 
-.orderandpay h3.page_title {font-size: 24px;font-weight: 700;margin-bottom: 15px; min-height:auto; margin-top:0;}  
+.orderandpay h3.page_title {font-size: 24px;font-weight: 700;margin-bottom: 15px; min-height:auto; margin-top:0;}
 .orderandpay h3.page_title.border {border-bottom: 2px #000000 solid; margin-bottom: 26px; padding-bottom: 34px;}
 
 .orderandpay .tit01 {font-size: 18px; color: #000; font-weight:500; line-height: normal; min-height:auto; margin-bottom:20px; margin-top:60px;}
@@ -396,8 +530,8 @@
 .orderandpay ul.list_type02 > li {position:relative;font-size: 13px;font-weight:400;line-height: 2; word-break: break-all;background: none;padding-left:10px;color:#000;}
 .orderandpay ul.list_type02 > li:before {content: '';display:block;width:4px;height: 4px;background: #000;position:absolute;top: 11px;left:0;}
 /* table */
-/* 
-	table02 td: height: 55px; 
+/*
+	table02 td: height: 55px;
 */
 
 .orderandpay .table01 tbody th {padding:17px 24px; font-size: 14px;  line-height:1.4em;}
@@ -446,8 +580,8 @@
 
 
 /* table */
-/* 
-	table02 td: height: 58px; 
+/*
+	table02 td: height: 58px;
 */
 
 .orderandpay .bbs_list_v2 tbody td:first-child {border-left:1px #EEEEEE solid;}
@@ -466,7 +600,7 @@
 .orderandpay .bbs_list01 thead {}
 .orderandpay .bbs_list01 thead th, .orderandpay .bbs_list01 tbody td {font-size:14px; line-height: normal; border-right:0;border-left:0;  text-align:center;}
 .orderandpay .bbs_list01 thead th {font-size: 14px; color: #313131; padding: 16px 0 17px;font-weight:500;background: #fafafa;border-top:2px #000 solid;border-bottom:1px #eee solid;}
-.orderandpay .bbs_list01 tbody td, 
+.orderandpay .bbs_list01 tbody td,
 .orderandpay .bbs_list01.tbl_slide tbody td{padding: 25px 20px 24px;text-align:center;font-weight: 500;color: #000;}
 .orderandpay .bbs_list01.tbl_slide tbody td {/*padding-left:50px; padding-right: 50px;*/}
 .orderandpay .bbs_list01 tbody td a {color:inherit; font-size:inherit; line-height: inherit; font-weight: inherit;}
@@ -490,8 +624,8 @@
 .orderandpay .stxt_tip {font-size: 14px; line-height: 1.4em; font-weight: 300; color:#777777;}
 
 .orderandpay .infobox01 {margin-top:45px;background: none;}
-.orderandpay .infobox01 .f_left, 
-.orderandpay .infobox01 .f_right {width:auto; float: none !important;} 
+.orderandpay .infobox01 .f_left,
+.orderandpay .infobox01 .f_right {width:auto; float: none !important;}
 .orderandpay .infobox01 .f_right {margin-top:30px;}
 .orderandpay .infobox01 .con {margin-top:15px;padding-left:8px;}
 .orderandpay .infobox01 dl {line-height:18px;}
@@ -545,8 +679,8 @@
 .orderandpay .input_txt, .orderandpay textarea {padding: 9px 4px 9px 4px;border: 1px solid #ccc;color: #000000;line-height: 1.4;font-size: 13px; font-weight: 400; font-family: 'font_ns','Apple SD Gothic Neo', sans-serif;}
 .orderandpay textarea {resize: none;}
 .orderandpay .input_txt {vertical-align: middle;height: auto;}
-.orderandpay input::placeholder {  color: #898989 !important; } 
-.orderandpay input::-webkit-input-placeholder {  color: #898989 !important; } 
+.orderandpay input::placeholder {  color: #898989 !important; }
+.orderandpay input::-webkit-input-placeholder {  color: #898989 !important; }
 .orderandpay input:-ms-input-placeholder {  color: #898989 !important; }
 .orderandpay textarea::-webkit-input-placeholder {  color: #898989 !important; }
 .orderandpay textarea:-ms-input-placeholder {  color: #898989 !important; }
@@ -557,7 +691,7 @@
 .orderandpay .file_input {position: relative;height: 100%;}
 .orderandpay .file_input label {position: absolute;top: 0;left: 0;right: 0;cursor:pointer;height: inherit;}
 .orderandpay .file_input label span.text {font-size: inherit;font-weight: inherit;color:#fff;text-align:center;padding: 10px 18px 9px;height: auto;line-height: normal;width: auto;background: #EEEEEE; display: inline-block;border-radius: 30px;font-size: 13px;font-weight:500;color: #000;margin-left: 448px;}
-.orderandpay .file_input label input {position:absolute;width:0;height:0;overflow:hidden;font-size: 0;padding: 0;border: 0 none;} 
+.orderandpay .file_input label input {position:absolute;width:0;height:0;overflow:hidden;font-size: 0;padding: 0;border: 0 none;}
 
 
 /* paging */
