--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -396,6 +396,11 @@
 .orderandpay .deposit_wrap .icon_question {float: left;}
 .orderandpay .deposit_wrap .icon_question {margin-top:-1px;}
 
+/* 주문완료 */
+
+.orderandpay .cartlist {background: #fafafa;}
+.orderandpay .cong_msg .line {border-bottom:0;}
+
 /* 레이어 팝업 */
 .orderandpay .tooltip_wrap {display:block;background: #fff;z-index: 1;border-radius: 24px; padding:20px;}
 .orderandpay .tooltip_wrap .tooltip_tit {font-size: 13px;font-weight: 700;padding-bottom: 10px;text-align: left;}
@@ -458,7 +463,7 @@
 
 /* 쿠폰 팝업 */
 .orderandpay .coupon_list_wrap {}
-.orderandpay .coupon_list_wrap .text_list {padding:20px;}
+.orderandpay .coupon_list_wrap .text_list {}
 .orderandpay .coupon_list_wrap .text_list li{ font-size: 12px; line-height: 1.8; font-weight: 500;}
 .orderandpay .coupon_list_wrap .text_list li:first-child {margin-top:0;}
 
